--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <button class="little_yes" @click="answer(1)">部分符合</button>
             </div>
             <div>
-                <button class="netural" @click="answer(0)">无偏向</button>
+                <button class="netural" @click="answer(0)">不确定</button>
             </div>
             <div>
                 <button class="little_no" @click="answer(-1)">部分不符合</button>
@@ -157,7 +157,7 @@
             <div>
                 <button class="more_no" @click="answer(-3)">非常不符合</button> 
             </div>
-            <h3 class="warning">请尽量避免选无偏向或者部分符合/部分不符合选项以免结果没有意义或者较为不准确</h2>
+            <h3 class="warning">请尽量避免选不确定或者部分符合/部分不符合选项以免结果没有意义或者较为不准确</h2>
         </div>
 
     </div>
