add first description
add first description

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <button type="button" :class="bclass" @mouseover="transbutton" @mouseleave="outbutton"
                 @click="start">八维测试</button>
             <!-- <button @click="test">test</button> -->
+            <h3>该测试基于荣格提出的八种类型理论和辅助功能猜想，与MBTI有一定理论渊源上的关系，但具体出入很大，无法混为一谈。</h3>
         </div>
         <div v-else-if="result_page">
             <h3>你的类型可能为:</h3>
