adjust question css

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div>
                 <p v-text="current_len + '/' + list_len" class="q_list_len"></p>
             </div>
-            <div class="p_question">
+            <div>
                 <p v-text="question_text" class="q_text"></p>
             </div>   
             <div>
