--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <h2>
                             较可能为该类型的角色:
                         </h2>
-                        <h3>该测试展示的分类仅是从心理动机方面进行的分类，所以即使是同一类型，也可能存在较大区别，为了体现这一点，刻意以相差较大的同一类型的人物为例子展示</h3>
+                        <h3>该测试展示的分类仅是从心理动机方面进行的分类，所以即使是同一类型，也可能存在较大区别，为了体现这一点，刻意以相差较大的同一类型的人物为例子展示（请不要用微信等内置浏览器打开页面）</h3>
                     </tr>
                     <tr>
                         <td v-html="img1"></td>
