--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                 {{ result }}
             </div>
             <div class="result_text_class">
-                <p v-html="result_text"> 该类型简介：{{result_text}} </p>
+                <p>该类型简介：</p>
+                <p> {{result_text}} </p>
                 <p>測試結果值:</p>
                 <p>八类型:</p>
                 <p>
@@ -166,7 +167,8 @@
                 <div class="result_class">
                     {{ enneagram_keyword }}
                 </div>
-                <p> 该类型简介：{{ enneagram_result_dec }} </p>
+                <p>该类型简介：</p>
+                <p> {{ enneagram_result_dec }} </p>
                 <p>測試結果值:</p>
                 <p>心区:</p>
                 <p>
