--- a/index.html
+++ b/index.html
@@ -174,6 +174,12 @@
                 <div class="result_class">
                     {{ enneagram_keyword }}
                 </div>
+                <div v-if="e_maybe[0]">
+                    <div class="result_class">
+                        你还可能为：
+                    </div>
+                    <button v-for="(maybetype,i) in e_maybe" class= maybe_button @click="emayberesult(maybetype,i)">{{ maybetype }}号</button>
+                </div>
                 <p>该类型简介：</p>
                 <p v-html="enneagram_result_dec"></p>
                 <p>測試結果值:</p>
