--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
 
 <body>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <!-- <script src="https://unpkg.com/vue@next"></script> -->
+    <script src="https://unpkg.com/vue@next"></script>
     <script src="https://unpkg.com/vue-i18n@9"></script>
     <script src="pickRandom.js"></script>
     <script src="cn_text.js"></script>
     <script src="cn_enneagram.js"></script>
     
     <div id="app">
-        <h1>人格心理类型测试</h1>
-        <!-- <h1>{{ $t("message.test_title") }}</h1> -->
+        <!-- <h1>人格心理类型测试</h1> -->
+        <h1>{{ $t("message.test_title") }}</h1>
         <div v-if="nostart">
-            <!-- <div>
+            <div>
                 <p>语言/Language：</p>
-                <select name="Language" class="Language" id="langselect" onchange="selectlanguage()">
-                    <option value="schinese" selected>简体中文/Simplifed Chinese</option>
-                    <option value="tchinese" >繁体中文/Traditional Chinese</option>
-                </select>
-            </div><br><br> -->
+                <select name="Language" class="Language" v-model="$i18n.locale">
+                    <option value="zh">简体中文/Simplifed Chinese</option>
+                    <option value="hk">繁体中文(未完工)/Traditional Chinese</option>
+                  </select>
+            </div><br><br>
             <button type="button" :class="bclass" @mouseover="transbutton" @mouseleave="outbutton"
                 @click="start">八维测试</button>
             <!-- <button @click="test">test</button> -->
@@ -335,7 +335,7 @@
     </div>
 
     <script type="module" src="vuescript.js"></script>
-    <script type="module" src="vuei18n.js"></script>
+    <!-- <script type="module" src="vuei18n.js"></script> -->
 </body>
 
 </html>
